# RIF_Quant

./: .gitignore  QUICKSTART.md  README.md  REPO_STRUCTURE.md  _config.yml  _tmp_regime_stats.py  index.md  params.yaml  pyproject.toml  requirements.txt  rif.py  setup.py  utils.py
paper/: main.tex  references.bib
paper/figures/: event_study_reallocation.csv  leadlag_significant_results.csv  regime_statistics.csv
scripts/: benchmark_latency.py  optimize_adverse_selection_parameters.py  optimize_hierarchical_parameters.py  run_adverse_selection.py  run_hierarchical_contagion.py
src/: config.py
src/analysis/: adverse_selection.py  contagion_metrics.py  event_study.py  leadlag.py
src/data/: loader.py
src/features/: mad_normalizer.py  wasserstein.py  wasserstein_optimized.py
src/models/: hmm_optimal.py  meta_hmm.py
src/realtime/: dual_clock_monitor.py
src/visualization/: regime_plots.py
