[tool.poetry]
name = "lob-contagion-regimes"
version = "1.0.0"
description = "Regime-Dependent Spatial Contagion in Limit Order Books"
authors = ["Your Name <your.email@institution.edu>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.24,<2.0"
pandas = "^2.0"
polars = "^1.0"
scipy = "^1.10"
matplotlib = "^3.7"
seaborn = "^0.12"
arch = "^6.1"
statsmodels = "^0.14"
scikit-learn = "^1.3"
hmmlearn = "^0.3"
numba = "^0.63.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ipython = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"